Feat: 降低 gradle 版本 , 防止 jitpack 打包失败

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion config.compileSdkVersion
+    compileSdkVersion 25
+    buildToolsVersion "25.0.3"
+
     defaultConfig {
         applicationId "com.yingt.base"
-        minSdkVersion config.minSdkVersion
-        targetSdkVersion config.targetSdkVersion
+        minSdkVersion 15
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,11 +28,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
-    implementation dependence.appcompatV7
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':lifecycle')
+    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile dependence.appcompatV7
+    compile 'com.android.support.constraint:constraint-layout:1.1.2'
+    compile project(':lifecycle')
 }
