--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-apply from: "https://ftp.inin88.com/temp/temp/config.gradle"
-
 buildscript {
 
     repositories {
@@ -9,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.4'
+        classpath 'com.android.tools.build:gradle:2.2.3'
     }
 }
 
@@ -24,4 +22,15 @@ allprojects {
 
 task clean(type: Delete) {
     delete rootProject.buildDir
+}
+
+ext {
+    APPCOMPAT_SUPER_VERSION = "25.3.1"
+    dependence = [
+            "appcompatV7"                : "com.android.support:appcompat-v7:${APPCOMPAT_SUPER_VERSION}",
+            "supportAnnotations"         : "com.android.support:support-annotations:${APPCOMPAT_SUPER_VERSION}",
+            "retrofit"                   : "com.squareup.retrofit2:retrofit:2.4.0",
+            "rxjava2"                    : "io.reactivex.rxjava2:rxjava:2.1.16",
+            "rxandroid"                  : "io.reactivex.rxjava2:rxandroid:2.0.2",
+    ]
 }
